--- a/src/packages/components/product-card/product-card.module.scss
+++ b/src/packages/components/product-card/product-card.module.scss
@@ -1,14 +1,29 @@
-.product__card {
+.productCard {
     position: relative;
     border-radius: 5px;
-    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.10);
-    background: var(--body-background-color);
+    overflow: hidden;
 
-    @media only screen and (min-width: 375px) {
+    &__isCollectionCard {
+        max-width: 270px;
+
+        img {
+            margin: 0 auto 1.2rem;
+            max-width: 150px;
+        }
+    }
+
+    &__isProductCard {
+        box-shadow: 0 3px 8px rgba(0, 0, 0, 0.10);
+        background: var(--body-background-color);
         max-width: 270px;
     }
 
     &:hover {
+
+        :global(.collectionContent)>* {
+            color: var(--secondary-color);
+        }
+
         :global(.thumbnail) {
             transform: scale(1.1);
             transition: transform 0.3s ease;
@@ -29,7 +44,6 @@
                     opacity: 1;
                 }
             }
-
         }
 
         :global(.actions) {
@@ -47,10 +61,6 @@
                     opacity: 1;
                 }
             }
-
-        }
-        .thumbnail__img {
-            transform: scale(1.02);
         }
     }
 }
