--- a/src/packages/components/product-card/product-card.module.scss
+++ b/src/packages/components/product-card/product-card.module.scss
@@ -4,6 +4,7 @@
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
   overflow: hidden;
+  margin: 10px;
 
   &__isCollectionCard {
     max-width: 270px;
