--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -22,6 +22,7 @@
   --bg-light-dark-color: #1a1818;
   --border-color: #EDEDED;
   --font-family-base: 'Poppins', sans-serif;
+  --font-family-heading: 'Lora', serif;
   --body-font-size: 1.5rem;
   --body-font-weight: 400;
   --body-line-height: 2.6rem;
